Added net calls to wordnik and transltr

--- a/spanTab.html
+++ b/spanTab.html
@@ -2,6 +2,17 @@
 
 	<head>
 		<title>Hello World!</title>
+
+		<script
+		  src="https://code.jquery.com/jquery-3.2.1.min.js"
+		  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+		  crossorigin="anonymous"></script>
+
+		<script src="js/net/net-utils.js"></script>
+		<script src="js/net/transltr-utils.js"></script>
+		<script src="js/net/wordnik-utils.js"></script>
+		<script src="js/spanTab.js"></script>
+
 	</head>
 
 	<body>
