cut down to only have past, present, future tenses

--- a/verbix-template.html
+++ b/verbix-template.html
@@ -11,116 +11,24 @@ IMPORTANT:
 <BASE href="http://tools.verbix.com/webverbix/personal/">
 </head>
 
-
-<a href="<!--conjugue=back-->">Back to the form</a> <br>
-<!--conjugue=language-->: <!--conjugue=verb--> <br>
-<!--conjugue=service-->
-
-<table border="0" cellpadding="0" cellspacing="0" width="600">
-  <tr>
-    <td><!--conjugue=97--></td>
-  </tr>
+<table border="1" width="100%">
+    <tr>
+        <td>Pretérito</td>
+        <td>Presente</td>
+        <td>Futuro</td>
+    </tr>
+    <tr>
+        <td>
+            <!--conjugue=4-->
+        </td>
+        <td>
+            <!--conjugue=0-->
+        </td>
+        <td>
+            <!--conjugue=5-->
+        </td>
+    </tr>
 </table>
 
-<table border="1" cellpadding="2" cellspacing="0" width="600">
-  <tr>
-    <td><b>Infinitivo: </b><!--conjugue=20--><b>Participio:</b> <!--conjugue=22--><b>Gerundio:</b>
-<!--conjugue=21-->    </td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td valign="top" width="50%"><b>Indicativo</b></td>
-    <td valign="top" width="50%"><b>Subjuntivo</b></td>
-  </tr>
-  <tr>
-    <td valign="top" width="50%"><table border="0" cellpadding="0" cellspacing="0"
-    width="100%">
-      <tr>
-        <td width="50%"><b>Presente</b><br>
-<!--conjugue=0-->        </td>
-        <td width="50%"><b>Perfecto</b><br>
-<!--conjugue=10-->        </td>
-      </tr>
-      <tr>
-        <td width="50%"><b><br>
-        Imperfecto</b><br>
-<!--conjugue=2-->        </td>
-        <td width="50%"><b><br>
-        Pluscuamperfecto</b><br>
-<!--conjugue=12-->        </td>
-      </tr>
-      <tr>
-        <td width="50%"><b><br>
-        Pretérito</b><br>
-<!--conjugue=4-->        </td>
-        <td width="50%"><b><br>
-        Pretérito anterior</b><br>
-<!--conjugue=14-->        </td>
-      </tr>
-      <tr>
-        <td width="50%"><b><br>
-        Futuro</b><br>
-<!--conjugue=5-->        </td>
-        <td width="50%"><b><br>
-        Futuro anterior</b><br>
-<!--conjugue=15-->        </td>
-      </tr>
-    </table>
-    </td>
-    <td valign="top" width="50%"><table border="0" cellpadding="0" cellspacing="0"
-    width="100%">
-      <tr>
-        <td width="50%"><b>Presente</b><br>
-<!--conjugue=1-->        </td>
-        <td width="50%"><b>Perfecto</b><br>
-<!--conjugue=11-->        </td>
-      </tr>
-      <tr>
-        <td width="50%"><b><br>
-        Imperfecto</b><br>
-<!--conjugue=25-->        <br>
-<!--conjugue=26-->        </td>
-        <td width="50%"><b><br>
-        Pluscuamperfecto</b><br>
-<!--conjugue=27-->        <br>
-<!--conjugue=28-->        </td>
-      </tr>
-      <tr>
-        <td width="50%"><b><br>
-        Futuro</b><br>
-<!--conjugue=6-->        </td>
-        <td width="50%"><b><br>
-        Futuro anterior</b><br>
-<!--conjugue=16-->        </td>
-      </tr>
-    </table>
-    </td>
-  </tr>
-  <tr>
-    <td><b>Condicional</b></td>
-    <td><b>Imperativo</b></td>
-  </tr>
-  <tr>
-    <td valign="top" width="50%"><table border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td><b><br>
-        Condicional</b><br>
-<!--conjugue=7-->        </td>
-        <td width="20"></td>
-        <td><b><br>
-        Condicional perfecto</b><br>
-<!--conjugue=17-->        </td>
-      </tr>
-    </table>
-    </td>
-    <td valign="top" width="50%"><b><br>
-    </b><br>
-<!--conjugue=8-->    </td>
-  </tr>
-  <tr>
-    <td colspan="2"><b>Verbs conjugated like <!--conjugue=20--></b><!--conjugue=99--></td>
-  </tr>
-</table>
-<p><a href="index.html">Back to the form</a></p>
 </body>
 </html>
