Update verbix template

--- a/verbix-template.html
+++ b/verbix-template.html
@@ -1,8 +1,8 @@
-<table border="1" width="100%">
+<table width="100%">
     <tr>
-        <td>Pretérito</td>
-        <td>Presente</td>
-        <td>Futuro</td>
+        <th>Pretérito<hr class="tense-separator"></th>
+        <th>Presente<hr class="tense-separator"></th>
+        <th>Futuro<hr class="tense-separator"></th>
     </tr>
     <tr>
         <td>
