Update verbix template to be self contained

--- a/verbix-template.html
+++ b/verbix-template.html
@@ -1,18 +1,54 @@
-<table width="100%">
-    <tr>
-        <th>Pretérito<hr class="tense-separator"></th>
-        <th>Presente<hr class="tense-separator"></th>
-        <th>Futuro<hr class="tense-separator"></th>
-    </tr>
-    <tr>
-        <td>
-            <!--conjugue=4-->
-        </td>
-        <td>
-            <!--conjugue=0-->
-        </td>
-        <td>
-            <!--conjugue=5-->
-        </td>
-    </tr>
-</table>
+<html>
+
+	<head>
+		<style>
+			@import url('https://fonts.googleapis.com/css?family=Oswald');
+
+			span, th {
+				font-family: Oswald;
+				color: white;
+			}
+
+			.verbtense {
+                width: 100%;
+                text-align: center;
+            }
+
+            .pronoun {
+                display: none;
+            }
+
+            .tense-separator {
+                width: 50%;
+                border-color: white;
+                border-top: white;
+            }
+
+            .one-third-cell {
+                width: 33%;
+            }
+		</style>
+	</head>
+
+	<body>
+        <table width="100%">
+            <tr>
+                <th class="one-third-cell">Pretérito<hr class="tense-separator"></th>
+                <th class="one-third-cell">Presente<hr class="tense-separator"></th>
+                <th class="one-third-cell">Futuro<hr class="tense-separator"></th>
+            </tr>
+            <tr>
+                <td class="one-third-cell">
+                    <!--conjugue=4-->
+                </td>
+                <td class="one-third-cell">
+                    <!--conjugue=0-->
+                </td>
+                <td class="one-third-cell">
+                    <!--conjugue=5-->
+                </td>
+            </tr>
+        </table>
+	</body>	
+
+</html>
