random word working

--- a/spanTab.html
+++ b/spanTab.html
@@ -24,10 +24,10 @@
 						<img class="child" src="images/grainy_spanish_flag.jpg">
 						<div class="child"></div>
 						<div class="inside">
-							<b>Ser</b>
+							<b id="bSpanish"></b>
 							<hr class="horizontal-divider">
 
-							<img id="imgLoading" src="images/loading.svg"></img>
+							<img style="display: none;" id="imgLoading" src="images/loading.svg"></img>
 							<iframe id="iframeConjugations"></iframe>
 						</div>
 					</div>
@@ -37,7 +37,7 @@
 					<div class="half">
 						<img class="child" src="images/grainy_us_flag.jpg">
 						<div class="inside">
-							<b>To Be</b>
+							<b id="bEnglish"></b>
 							<hr class="horizontal-divider"
 						</div>
 					</div>
