refactored to genericize languages

--- a/spanTab.html
+++ b/spanTab.html
@@ -17,27 +17,30 @@
 		
 		<table cellspacing="0" width="100%" height="100%">
 			<tr>
-				<td id="divSpanishColor" class="parent">
+				<td id="divLeftColor" class="parent">
 					<div class="half">
-						<img id="imgSpanishFlag" class="child" style="display: none;" src="images/grainy_spanish_flag.jpg">
+						<img id="imgLeftFlag" class="child" style="display: none;">
 						<div class="child"></div>
-						<div id="divSpanish" class="inside">
-							<b id="bSpanish"></b>
+						<div id="divLeft" class="inside">
+							<b id="bLeft"></b>
 							<hr class="horizontal-divider">
 
-							<img style="display: none;" id="imgLoading" src="images/loading.svg"></img>
-							<iframe scrolling="no" id="iframeConjugations"></iframe>
+							<img style="display: none;" id="imgLeftLoading" src="images/loading.svg"></img>
+							<iframe scrolling="no" id="iframeLeftConjugations"></iframe>
 						</div>
 					</div>
 				</td>
 				<td class="vertical-divider"></td>
-				<td id="divEnglishColor" class="parent">
+				<td id="divRightColor" class="parent">
 					<div class="half">
-						<img id="imgUSFlag" class="child" style="display: none;" src="images/grainy_us_flag.jpg">
+						<img id="imgRightFlag" class="child" style="display: none;">
 						<div class="child"></div>
-						<div id="divEnglish" class="inside">
-							<b id="bEnglish"></b>
-							<hr class="horizontal-divider"
+						<div id="divRight" class="inside">
+							<b id="bRight"></b>
+							<hr class="horizontal-divider">
+
+							<img style="display: none;" id="imgRightLoading" src="images/loading.svg"></img>
+							<iframe scrolling="no" id="iframeRightConjugations"></iframe>
 						</div>
 					</div>
 				</td>
