--- a/optionsPage.html
+++ b/optionsPage.html
@@ -1,7 +1,44 @@
 <html>
 
+    <head>
+        <title>Word of the Tab Settings</title>
+
+        <script src="js/vendors/jquery-3.2.0.min.js"></script>
+
+        <script src="js/settings.js"></script>
+        <script src="js/optionsPage.js"></script>
+
+        <link rel="stylesheet" href="css/options.css"/>
+    </head>
+
     <body>
-        Hello World
+        Language:
+        <select id="selLanguage">
+            <option value="spanish_english">Spanish &#10145; English</option>
+        </select>
+
+        <br/>
+        <br/>
+
+        Background:
+        
+        <br/>
+        <br/>
+
+        <div class="half" style="float: left;">
+            <img id="imgFlagsBgOption" class="bg-option selected" data-value="FLAGS" src="images/spanish_english_flags.png"/>
+            <br/>
+            Flags
+        </div>
+
+        <div class="half" style="float: right;">
+            <img id="imgColorsBgOption" class="bg-option" data-value="COLORS" src="images/colors.png"/>
+            <br/>
+            Colors
+        </div>
+
+        <p align="right"><button id="btnSave" type="button">Save</button></p>
+
     </body>
 
 </html>
