added french_english language, added about icon

--- a/optionsPage.html
+++ b/optionsPage.html
@@ -15,6 +15,7 @@
         Language:
         <select id="selLanguage">
             <option value="spanish_english">Spanish &#10145; English</option>
+            <option value="french_english">French &#10145; English</option>
         </select>
 
         <br/>
