--- a/spanTab.html
+++ b/spanTab.html
@@ -7,12 +7,14 @@
 		<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 
 		<script src="js/vendors/jquery-3.2.0.min.js"></script>
+		<script src="js/vendors/featherlight.min.js"></script>
 
 		<script src="js/net/net-utils.js"></script>
 		<script src="js/settings.js"></script>
 		<script src="js/spanTab.js"></script>
 		
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/vendors/featherlight.min.css">
 
 	</head>
 
@@ -53,9 +55,18 @@
 		</table>
 
 		<div class="icons">
-			<img id="imgAbout" class="icon about-icon" src="images/about-icon.png">
+			<img id="imgAbout" class="icon about-icon" data-featherlight="#divAboutModal" src="images/about-icon.png">
 			<img id="imgSettings" class="icon settings-icon" src="images/settings-icon.png"/>
 		</div> 
+
+		<div class="about-modal" id="divAboutModal">
+			<h1>Word of the Tab</h1>
+			<hr>
+			<h3 id="h3Version"><h3>
+			<h3>Questions? Comments? Suggestions? <br /> Send me an email at <a href="mailto:mikeyinc1@gmail.com">mikeyinc1@gmail.com</a></h3>
+			<hr>
+			Conjugations provided by <a href="http://www.verbix.com/">Verbix</a>
+		</div>
 		
 	</body>
 
